[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
itertools = "0.10.5"
regex = "1"
lazy_static = "1.4.0"
rayon = "1.6.1"
hashbag = "0.1.9"